Changed all base prms to 5000 year max timestep.

--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ee816504",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "import ripropagate\n",
     "\n",
     "# Key function: generate\n",
-    "# Parameters in generate: lthick,evel,etime,output,ver,soft"
+    "# Parameters in generate: lthick,evel,etime,output,ver,soft,shell,file"
    ]
   },
   {
@@ -113,9 +113,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "415f8d6c",
+   "metadata": {},
+   "source": [
+    "## 9/5/21 ##\n",
+    "* First model had some kind of MPI error, so just restarted.\n",
+    "* Model b had convergence error very early on, so changed max timestep to 5000 and restarted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae108fd5",
+   "metadata": {},
+   "source": [
+    "## 9/6/21 ##\n",
+    "* Models c and d crashed very early - viscoelasticity is a pain.\n",
+    "* John implemented a fix for particles, so trying that model again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5b7b9a9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,output='./090621_ri',soft=0.375,shell='run_base_nal.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a060e21",
+   "id": "b9e09f5d",
    "metadata": {},
    "outputs": [],
    "source": []
