Updated lab notebook.

--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ee816504",
    "metadata": {},
    "outputs": [],
@@ -143,9 +143,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96ae13b4",
+   "metadata": {},
+   "source": [
+    "## 9/11/21 ##\n",
+    "* Model b finished, first model still has errors, so abandoning for now. Inverting model b."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "998d9ac1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./091121_ri',file='ri_base_nopart_1925.prm',soft=0.375,ver='b') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d88c313",
+   "metadata": {},
+   "source": [
+    "## 9/14/21 ##\n",
+    "* Particles model ran successfully with John's fix, so inverting that model now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "358ea198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./091421_ri',soft=0.375,shell='run_base_nal.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba6bcc7",
+   "id": "1b72e87a",
    "metadata": {},
    "outputs": [],
    "source": []
