--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -181,9 +181,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fee745e",
+   "metadata": {},
+   "source": [
+    "## 9/15/21 ##\n",
+    "* Model b only inverted about 8 Myr in 48 hours, so running it again (091121_ri_restart) to try to get more inversion."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b72e87a",
+   "id": "60ac7157",
    "metadata": {},
    "outputs": [],
    "source": []
