Updated PRM bases for GMRES and A block testing.

--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ee816504",
    "metadata": {},
    "outputs": [],
@@ -190,9 +190,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4759dba",
+   "metadata": {},
+   "source": [
+    "## 9/16/21 ##\n",
+    "* Canceled the restart model. Instead, going to start the inversion of 090221_ri_b with CFL number at 0.5 to see if it improves runtime.\n",
+    "* Particles model inversion failed with convergence error at ~20 Myr"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60ac7157",
+   "id": "df174797",
    "metadata": {},
    "outputs": [],
    "source": []
