--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -191,18 +191,94 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4759dba",
+   "id": "5d015598",
    "metadata": {},
    "source": [
     "## 9/16/21 ##\n",
     "* Canceled the restart model. Instead, going to start the inversion of 090221_ri_b with CFL number at 0.5 to see if it improves runtime.\n",
-    "* Particles model inversion failed with convergence error at ~20 Myr"
+    "* Particles model inversion failed with convergence error at ~20 Myr, going to try restarting that with GMRES and A block modifications."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b24172a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./091721_ri_a',file='ri_base_nopart_1925_cfl5.prm',soft=0.375,ver='a') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f61aa522",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./091721_ri_b',file='ri_base_gmres.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "23347b40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./091721_ri_c',file='ri_base_a.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "81b37ace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./091721_ri_d',file='ri_base_gmres_a.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='d')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "113c91d6",
+   "metadata": {},
+   "source": [
+    "## 9/20/21 ##\n",
+    "* Testing the isosurfaces plugin as a way of saving computation time.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b3be627c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0.1,evel=1,output='./092021_ri_test',file='ri_base_iso.prm',soft=0.375,shell='run_base_nal.sh') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb5393ec",
+   "metadata": {},
+   "source": [
+    "## 9/21/21 ##\n",
+    "* 091721_ri_a ran to 23 Myr in 48 hours, so slightly faster than with the lower CFL (only got to 20 Myr)\n",
+    "* 091721_ri_b ran to completion in 1.36e5 seconds.\n",
+    "* c had the exact same result as b.\n",
+    "* d also had the exact same result.\n",
+    "* Makes me think the particles model didn't actually benefit from any of these changes.\n",
+    "* Only saved full output from b, not from c and d. Full model size was about 130 gb.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df174797",
+   "id": "9e83df8d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -224,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
