Increased number of particles to 3e6.

--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -272,13 +272,43 @@
     "* c had the exact same result as b.\n",
     "* d also had the exact same result.\n",
     "* Makes me think the particles model didn't actually benefit from any of these changes.\n",
-    "* Only saved full output from b, not from c and d. Full model size was about 130 gb.\n"
+    "* Only saved full output from b, not from c and d. Full model size was about 130 gb.\n",
+    "<br><br>\n",
+    "* Planning to play with particles a little to see how it affects output size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9e83df8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,evel=1,output='./092121_ri_test',file='ri_base_iso.prm',soft=0.375,shell='run_base_nal.sh') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3b41407",
+   "metadata": {},
+   "source": [
+    "* Seems like adaptive mesh refinement would reduce the number of cells and thus the number of particles. Testing this out for real now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "db189355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./092121_ri',file='ri_base_iso.prm',soft=0.375,shell='run_base_nal.sh') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e83df8d",
+   "id": "a15845e6",
    "metadata": {},
    "outputs": [],
    "source": []
