Updated lab notebook.'

--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ee816504",
    "metadata": {},
    "outputs": [],
@@ -306,9 +306,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "662a5798",
+   "metadata": {},
+   "source": [
+    "## 9/23/21 ##\n",
+    "* Going to try out an additional model with even less refinement in the asthenosphere, and a change in the particle interpolation scheme."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b7c118f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0,evel=1,output='./092321_ri_test',file='ri_base_iso_200.prm',soft=0.375,shell='run_base_nal.sh') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18687e81",
+   "metadata": {},
+   "source": [
+    "* That seemed to work, so running this as a full extension model now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6a12fea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./092321_ri',file='ri_base_iso_200.prm',soft=0.375,shell='run_base_nal.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a15845e6",
+   "id": "79c1d018",
    "metadata": {},
    "outputs": [],
    "source": []
