Updated lab notebook.

--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ee816504",
    "metadata": {},
    "outputs": [],
@@ -343,9 +343,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fd0462d",
+   "metadata": {},
+   "source": [
+    "## 9/24/21 ##\n",
+    "* Going to try a test models that is the same as above using fastscape coupling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bd1cb890",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0.1,evel=1,output='./092421_ri_test',file='ri_base_iso_200_fs.prm',soft=0.375,shell='run_base_fs.sh')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7fd2b8c",
+   "metadata": {},
+   "source": [
+    "* Actually seemed to work. Trying this for real."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f449cbec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./092421_ri',file='ri_base_iso_200_fs.prm',soft=0.375,shell='run_base_fs.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c1d018",
+   "id": "1acdea3f",
    "metadata": {},
    "outputs": [],
    "source": []
