Updated lab notebook.

--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ee816504",
    "metadata": {},
    "outputs": [],
@@ -380,9 +380,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0358ed56",
+   "metadata": {},
+   "source": [
+    "* 0921 ran successfully. Inverting now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7bda5d46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./092421_ri_b',file='ri_base_iso.prm',soft=0.375,shell='run_base_nal.sh',ver='b') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dd7614b",
+   "metadata": {},
+   "source": [
+    "## 9/27/21 ##\n",
+    "* Model with less refinement in asthenosphere worked (0923)\n",
+    "* Fastscape coupling model failed after 2 Myr with same particle generation error - needs Naliboff particle fix (0924)\n",
+    "* Inversion of 0921 (0924b) ran successfully, takes up somewhat less space (60gb instead of 140gb)\n",
+    "* Next steps - invert 0923 and start new model with higher max timestep to see if we can improve runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e9d380d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./092721_ri_a',file='ri_base_iso_200.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='a')\n",
+    "ripropagate.generate(etime=12.5,evel=1,output='./092721_ri_b',file='ri_base_iso_200_20.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20e800a2",
+   "metadata": {},
+   "source": [
+    "* Canceled b momentarily, concerned that additional refinement is happening at the base of the model. Trying a max refinement function to stop this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "818278ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=0.1,evel=1,output='./092721_ri_b_test',file='ri_base_iso_200_20.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df8d174d",
+   "metadata": {},
+   "source": [
+    "* That worked, so b is in the queue again. Also going to run C with the viscosity range expanded back to 1e18-1e26 Pa S. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "714c3ed5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./092721_ri_c',file='ri_base_iso_200_20_1826.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='c')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9470b94",
+   "metadata": {},
+   "source": [
+    "## 9/30/21 ##\n",
+    "* 0927a ran successfully, but slower than the isosurface only inversion. Currently restarting that.\n",
+    "* 0927b crashed almost immediately, retried with 10000 year timestep but don't think that worked\n",
+    "* 0927c didn't crash but was pretty slow (6 Myr in 48 hours).\n",
+    "* Given differences in isosurface models and globally refined models (0917b and 0924b), need to have more refinement in upper part of model. Starting new run with 1 km above 200 km and 2 km below that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "88ba81ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./093021_ri',file='ri_base_200.prm',soft=0.375,shell='run_base_nal.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acdea3f",
+   "id": "39be19f7",
    "metadata": {},
    "outputs": [],
    "source": []
