Updated lab notebook.

--- a/ri_lab_notebook_September2021.ipynb
+++ b/ri_lab_notebook_September2021.ipynb
@@ -483,9 +483,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8112bcb0",
+   "metadata": {},
+   "source": [
+    "* This crashed almost immediately too, even with max timestep at 5000. Retrying with CFL at 0.2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39be19f7",
+   "id": "32620c4d",
    "metadata": {},
    "outputs": [],
    "source": []
