Added base files to run models on the fastscape with particles fix aspect version.

--- a/ri_lab_notebook_October2021.ipynb
+++ b/ri_lab_notebook_October2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fb40e92f",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,52 @@
     "# Key function: generate\n",
     "# Parameters in generate: lthick,evel,etime,output,ver,soft,shell,file"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b19f7860",
+   "metadata": {},
+   "source": [
+    "## 10/7/21 ##\n",
+    "* Finally got 0930 to finish after errors with the minimum refinement function. Inverting it now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "36bf5e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./100721_ri',file='ri_base.prm',soft=0.375,shell='run_base_nal.sh')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "280fab30",
+   "metadata": {},
+   "source": [
+    "* Cherry-picked John's particle fix and put in the fastscape coupled version of aspect. Trying that out now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9ec437f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./100721_ri_b',file='ri_base_fs.prm',soft=0.375,shell='run_base_fsp.sh',\n",
+    "                    ver='b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f7540ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
