Minor updates to tchron.

--- a/ri_lab_notebook_October2021.ipynb
+++ b/ri_lab_notebook_October2021.ipynb
@@ -63,9 +63,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "028bc0a2",
+   "metadata": {},
+   "source": [
+    "## 10/19/21 ##\n",
+    "* Cherry-picking didn't work, need a full rebase\n",
+    "* 100721 inverted, but looks exactly the same as model with more AMR, makes me think viscosity changes actually behind this.\n",
+    "* Trying doing the 1 km refinement only in the lithosphere with the current 1e19-1e25 viscosity, just to see what that does."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6eb8bf78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./101921_ri',file='ri_base_iso.prm',soft=0.375,shell='run_base_nal.sh')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "884ae5ed",
+   "metadata": {},
+   "source": [
+    "* Also going to try running the coarse mesh with a wide viscosity range (1e18-1e26), to see what that does"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e0ba5053",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./101921_ri_b',file='ri_base_coarse_1826.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c6b067d",
+   "metadata": {},
+   "source": [
+    "* 1019 already finished, rifted really fast. Going to invert it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9cbd6fa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./101921_ri_c',file='ri_base_iso.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='c')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2555eef6",
+   "metadata": {},
+   "source": [
+    "## 10/19/21 ##\n",
+    "* Sill finishing up this inversion, but have a couple other things to try as permutations of this model.\n",
+    "* Going to add an extra isosurface to make the model more coarse (and faster???)\n",
+    "* Going to also try balancing inflow on the sides of the model instead of the base."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8c1f70c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./102521_ri_a',file='ri_base_iso2.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "536fc256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./102521_ri_b',file='ri_base_iso_inflow.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='b')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f7540ec",
+   "id": "38eebd30",
    "metadata": {},
    "outputs": [],
    "source": []
