Set things up to run on fastscape rebase.

--- a/ri_lab_notebook_October2021.ipynb
+++ b/ri_lab_notebook_October2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fb40e92f",
    "metadata": {},
    "outputs": [],
@@ -123,10 +123,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2555eef6",
+   "id": "12e99abf",
    "metadata": {},
    "source": [
-    "## 10/19/21 ##\n",
+    "## 10/25/21 ##\n",
     "* Sill finishing up this inversion, but have a couple other things to try as permutations of this model.\n",
     "* Going to add an extra isosurface to make the model more coarse (and faster???)\n",
     "* Going to also try balancing inflow on the sides of the model instead of the base."
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8c1f70c3",
+   "id": "7bf74769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "536fc256",
+   "id": "2dd381ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +155,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e3a0608",
+   "metadata": {},
+   "source": [
+    "## 10/26/21 ##\n",
+    "* Inversion (1019c) ran successfully - shows ame features as other AMR schemes, so likely due to viscosity and/or particle inflow.\n",
+    "* Rebase of fastscape model now compiled successfully. Trying this again with an equivalent to 1019c."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3d45ab5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./102621_ri',file='ri_base_fs.prm',soft=0.375,shell='run_base_fsr.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38eebd30",
+   "id": "affc7ccb",
    "metadata": {},
    "outputs": [],
    "source": []
