--- a/ri_lab_notebook_October2021.ipynb
+++ b/ri_lab_notebook_October2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fb40e92f",
    "metadata": {},
    "outputs": [],
@@ -175,9 +175,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31de17a6",
+   "metadata": {},
+   "source": [
+    "## 10/27/21 ##\n",
+    "* 1025a finnished running, pulling it now and putting in the inversion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ff61e05e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./102721_ri_a',file='ri_base_iso2.prm',soft=0.375,shell='run_base_nal.sh',\n",
+    "                    ver='a')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affc7ccb",
+   "id": "f8d5be0c",
    "metadata": {},
    "outputs": [],
    "source": []
