updated lab notebook.

--- a/ri_lab_notebook_October2021.ipynb
+++ b/ri_lab_notebook_October2021.ipynb
@@ -195,9 +195,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2b28c20",
+   "metadata": {},
+   "source": [
+    "## 10/29/21 ##\n",
+    "* Rebased fastscape model still crashed after 8 Myr - going to try turning on \"marine\" mode."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ba002436",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./102921_ri',file='ri_base_fs.prm',soft=0.375,shell='run_base_fsr.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8d5be0c",
+   "id": "9d01291f",
    "metadata": {},
    "outputs": [],
    "source": []
