Updated lab notebook.

--- a/ri_lab_notebook_November2021.ipynb
+++ b/ri_lab_notebook_November2021.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5332925",
+   "id": "28d82f87",
    "metadata": {},
    "source": [
     "## Lab Notebook - Rift Inversion Project ##\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f83e26fc",
+   "id": "486f8b03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb27cfb",
+   "id": "faca2d2d",
    "metadata": {},
    "source": [
     "## 11/1/2021 ##\n",
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6e71b0c8",
+   "id": "380083ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +46,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d538c28",
+   "id": "9b95a757",
    "metadata": {},
    "source": [
-    "* Fastscape model with marine turned on crashed very quickly. Need to take a closer look at parameters."
+    "* Fastscape model with marine turned on crashed very quickly. Need to take a closer look at parameters.\n",
+    "* Made some changes after suggestions from Derek, going to try that out again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c72690b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./110121_ri_b',file='ri_base_fs.prm',soft=0.375,shell='run_base_fsr.sh',\n",
+    "                    ver='b')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4005cc3",
+   "id": "425f91a6",
    "metadata": {},
    "outputs": [],
    "source": []
