Updated prm files.

--- a/ri_lab_notebook_November2021.ipynb
+++ b/ri_lab_notebook_November2021.ipynb
@@ -119,9 +119,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c995069d",
+   "metadata": {},
+   "source": [
+    "## 11/11/2021 ##\n",
+    "* Realized problem is persisting even with the new outflow scheme - going to try reverting back to cell averaging instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "67c926e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./111121_ri_a',file='ri_base.prm',soft=0.375,shell='run_base_nal.sh',ver='a')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7db1b43b",
+   "metadata": {},
+   "source": [
+    "* Also doing a version of this with 1 km resolution throughout."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c29b5a30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./111121_ri_b',file='ri_base_hires.prm',soft=0.375,shell='run_base_nal.sh',ver='b')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42315cbb",
+   "id": "2ce8e8cd",
    "metadata": {},
    "outputs": [],
    "source": []
