Added cell average model with new inflow scheme.

--- a/ri_lab_notebook_November2021.ipynb
+++ b/ri_lab_notebook_November2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "486f8b03",
    "metadata": {},
    "outputs": [],
@@ -156,9 +156,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f22ce5e",
+   "metadata": {},
+   "source": [
+    "## 11/17/2021 ##\n",
+    "* 1111a finished, so going to invert that.\n",
+    "* But also need to try this with the new inflow scheme, so adding that.\n",
+    "* 1111b is super slow, so not going to continue with that at the moment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9a5c9946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./111721_ri_a',file='ri_base.prm',soft=0.375,shell='run_base_nal.sh',ver='a')\n",
+    "ripropagate.generate(etime=12.5,evel=1,output='./111721_ri_b',file='ri_base_inflow.prm',soft=0.375,shell='run_base_nal.sh',ver='b')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ce8e8cd",
+   "id": "1e3c85a8",
    "metadata": {},
    "outputs": [],
    "source": []
