Removed unused imports from vtk_plot and simplified tchron import for tests.

--- a/ri_lab_notebook_November2021.ipynb
+++ b/ri_lab_notebook_November2021.ipynb
@@ -178,9 +178,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "600d649f",
+   "metadata": {},
+   "source": [
+    "## 11/22/2021 ##\n",
+    "* Discovered that 1111a went seriously wrong (rifting initialized on edge of model), so canceled 1117a. \n",
+    "* 1117b almost done rifting, but also need to check that the same problem didn't occur.\n",
+    "* Pulling 1111b to see how hires version did as well."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3c85a8",
+   "id": "d7648823",
    "metadata": {},
    "outputs": [],
    "source": []
