Updated lab notebook.

--- a/ri_lab_notebook_November2021.ipynb
+++ b/ri_lab_notebook_November2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "486f8b03",
    "metadata": {},
    "outputs": [],
@@ -192,6 +192,27 @@
    "cell_type": "markdown",
    "id": "1e8d0d65",
    "metadata": {},
+   "source": [
+    "## 11/24/2021 ##\n",
+    "* 1117b finished rifting, inverting that now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0d0a1561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./112421_ri',file='ri_base_inflow.prm',soft=0.375,shell='run_base_nal.sh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "351c2d8b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
