Made version of model with temperature and composition fixed on sides but not velocity

--- a/ri_lab_notebook_NovemberDecember2021.ipynb
+++ b/ri_lab_notebook_NovemberDecember2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "486f8b03",
    "metadata": {},
    "outputs": [],
@@ -241,9 +241,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38c49ce5",
+   "metadata": {},
+   "source": [
+    "## 12/13/2021 ##\n",
+    "* A few issues with previous models - trying a model now with 400 km domain but with composition/temperature fixed at sides but vertical velocities allowed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "35eba516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./121321_ri',file='ri_base_inflow_tcfix.prm',soft=0.375,depth=400,shell='run_base_nal.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28c3587e",
+   "id": "2137b8bf",
    "metadata": {},
    "outputs": [],
    "source": []
