Added model with outflow at sides but nothing fixed on sides.

--- a/ri_lab_notebook_NovemberDecember2021.ipynb
+++ b/ri_lab_notebook_NovemberDecember2021.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "486f8b03",
    "metadata": {},
    "outputs": [],
@@ -260,9 +260,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "293f644d",
+   "metadata": {},
+   "source": [
+    "## 12/15/2021 ##\n",
+    "* That crashed after 3.5 Myr, so reverting back to no fixed parameters at size but still new inflow/outflow scheme."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8e523204",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./121521_ri',file='ri_base_inflow_nofix.prm',soft=0.375,depth=400,shell='run_base_nal.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a62545a",
+   "id": "6322ae9a",
    "metadata": {},
    "outputs": [],
    "source": []
