Fixed typo in velocity function.

--- a/ri_lab_notebook_NovemberDecember2021.ipynb
+++ b/ri_lab_notebook_NovemberDecember2021.ipynb
@@ -279,9 +279,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6414d94",
+   "metadata": {},
+   "source": [
+    "## 12/16/2021 ##\n",
+    "* That still crashed, so trying the same thing but with slightly larger model domain and coarsened resolution on the sides.\n",
+    "* Actually, scratch that, discovered major typo in velocity function (p1 was incorrectly smaller than p2, so going back to model with fixed velocity,temp,comp on sides with correct velocities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "478dba4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./121621_ri',file='ri_base_inflow.prm',soft=0.375,depth=400,shell='run_base_nal.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6322ae9a",
+   "id": "414f6f79",
    "metadata": {},
    "outputs": [],
    "source": []
