Updated lab notebook

--- a/ri_lab_notebook_NovemberDecember2021.ipynb
+++ b/ri_lab_notebook_NovemberDecember2021.ipynb
@@ -352,9 +352,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe5cce7f",
+   "metadata": {},
+   "source": [
+    "## 12/23/2021 ##\n",
+    "* That rifted successfully, so now inverting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ebd9f7d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./122321_ri',file='ri_base_600.prm',soft=0.375,depth=600,\n",
+    "                     p1=400,p2=200,shell='run_base_nal.sh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e72ace5d",
+   "id": "1f86ae49",
    "metadata": {},
    "outputs": [],
    "source": []
