Updated base 400 km file to have second isosurface and started January22 lab notebook.

--- a/lab_notebooks_archived/ri_lab_notebook_NovemberDecember2021.ipynb
+++ b/lab_notebooks_archived/ri_lab_notebook_NovemberDecember2021.ipynb
@@ -372,9 +372,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07d05ec4",
+   "metadata": {},
+   "source": [
+    "Disovered issue with AMR scheme - everything in asthenosphere is 4 km - refining that to 2 instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1f86ae49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./122321_ri_b',file='ri_base_600_amr.prm',soft=0.375,depth=600,\n",
+    "                     p1=400,p2=200,shell='run_base_nal.sh',ver='b')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f86ae49",
+   "id": "ef3283b9",
    "metadata": {},
    "outputs": [],
    "source": []
