Tested 400 km model with 1 km resolution throughout and to 1573 K.

--- a/ri_lab_notebook_January2022.ipynb
+++ b/ri_lab_notebook_January2022.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8af19de8",
    "metadata": {},
    "outputs": [],
@@ -45,9 +45,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40e48e53",
+   "metadata": {},
+   "source": [
+    "## 1/6/2022 ##\n",
+    "* Finished rifting, inverting now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8f19b92b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./010622_ri',file='ri_base.prm',soft=0.375,depth=400,shell='run_base_nal.sh')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7761fb02",
+   "metadata": {},
+   "source": [
+    "## 1/13/2022 ##\n",
+    "* Inversion successful, but orogen result different from old (1 then 4 km) AMR scheme - going to try with 1 km all the way down and a deeper transition to 2 km"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "56aab1e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=12.5,evel=1,output='./011322_ri_a',file='ri_base_all1km.prm',soft=0.375,depth=400,shell='run_base_nal.sh',\n",
+    "                    ver='a')\n",
+    "ripropagate.generate(etime=12.5,evel=1,output='./011322_ri_b',file='ri_base_1kmdeep.prm',soft=0.375,depth=400,shell='run_base_nal.sh',\n",
+    "                    ver='b')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94d3f2d8",
+   "id": "d4c2bd5f",
    "metadata": {},
    "outputs": [],
    "source": []
