Updated lab notebook.

--- a/ri_lab_notebook_January2022.ipynb
+++ b/ri_lab_notebook_January2022.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8af19de8",
    "metadata": {},
    "outputs": [],
@@ -86,9 +86,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8420783",
+   "metadata": {},
+   "source": [
+    "## 1/14/2022 ##\n",
+    "* B model finished rifting, inverting now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4397735c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./011422_ri_b',file='ri_base_1kmdeep.prm',soft=0.375,depth=400,shell='run_base_nal.sh',\n",
+    "                    ver='b')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4c2bd5f",
+   "id": "160a25b5",
    "metadata": {},
    "outputs": [],
    "source": []
