Updated lab notebook

--- a/ri_lab_notebook_January2022.ipynb
+++ b/ri_lab_notebook_January2022.ipynb
@@ -106,9 +106,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30d8d9ae",
+   "metadata": {},
+   "source": [
+    "## 1/15/2022 ##\n",
+    "* A model finished rifting, starting that inversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "18c39085",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./011522_ri_a',file='ri_base_all1km.prm',soft=0.375,depth=400,shell='run_base_nal.sh',\n",
+    "                    ver='a')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160a25b5",
+   "id": "c971f40e",
    "metadata": {},
    "outputs": [],
    "source": []
