Running new models with 2 nodes to increase speed.

--- a/ri_lab_notebook_February2022.ipynb
+++ b/ri_lab_notebook_February2022.ipynb
@@ -35,12 +35,13 @@
     "* Second, model at 600 km depth with AMR\n",
     "* Third, model at 600 km depth with 1 km resolution throughout\n",
     "\n",
-    "* Because these models are slow, increasing the number of nodes assuming scaling tests will help, at least for the inversion phase"
+    "* Because these models are slow, increasing the number of nodes assuming scaling tests will help, at least for the inversion phase\n",
+    "* Scaling tests indicated that 2-3 nodes effectively scale runtimes, so running these models with 2 nodes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d324671d",
    "metadata": {},
    "outputs": [
@@ -70,7 +71,7 @@
        "        [0., 0., 0., ..., 0., 0., 0.]]))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -113,13 +114,13 @@
    ],
    "source": [
     "ripropagate.generate(etime=12.5,evel=1,output='./020122_ri_a',file='ri_base.prm',soft=0.375,depth=400,shell='run_base_nal.sh',\n",
-    "                    ver='a')\n",
+    "                    ver='a',nodes=2)\n",
     "ripropagate.comp_ascii(depth=400,output='./020122_ri_a')\n",
     "\n",
     "ripropagate.generate(etime=12.5,evel=1,output='./020122_ri_b',file='ri_base_600_amr.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
-    "                     shell='run_base_nal.sh',ver='b')\n",
+    "                     shell='run_base_nal.sh',ver='b',nodes=2)\n",
     "ripropagate.generate(etime=12.5,evel=1,output='./020122_ri_c',file='ri_base_600.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
-    "                     shell='run_base_nal.sh',ver='c')\n",
+    "                     shell='run_base_nal.sh',ver='c',nodes=2)\n",
     "ripropagate.comp_ascii(depth=600,output='./020122_ri_b')\n",
     "ripropagate.comp_ascii(depth=600,output='./020122_ri_c')"
    ]
