Updated lab notebook.

--- a/ri_lab_notebook_February2022.ipynb
+++ b/ri_lab_notebook_February2022.ipynb
@@ -126,9 +126,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83f0c67f",
+   "metadata": {},
+   "source": [
+    "## 2/2/2022 ##\n",
+    "* a and b models rifted, so inverting them now. c is still running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ff171532",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./020222_ri_a',file='ri_base.prm',soft=0.375,depth=400,shell='run_base_nal.sh',\n",
+    "                    ver='a',nodes=2)\n",
+    "ripropagate.generate(etime=32.5,evel=-1,output='./020222_ri_b',file='ri_base_600_amr.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
+    "                     shell='run_base_nal.sh',ver='b',nodes=2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff171532",
+   "id": "9282cf1a",
    "metadata": {},
    "outputs": [],
    "source": []
