Updated lab notebook.

--- a/ri_lab_notebook_February2022.ipynb
+++ b/ri_lab_notebook_February2022.ipynb
@@ -148,9 +148,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49e979df",
+   "metadata": {},
+   "source": [
+    "## 2/3/2022 ##\n",
+    "* c model also finished rifting, so inverting that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9edc5f56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./020322_ri_c',file='ri_base_600.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
+    "                     shell='run_base_nal.sh',ver='c',nodes=2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9282cf1a",
+   "id": "bfca4d43",
    "metadata": {},
    "outputs": [],
    "source": []
