--- a/ri_lab_notebook_February2022.ipynb
+++ b/ri_lab_notebook_February2022.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b83555a9",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7478922f",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "        [0., 0., 0., ..., 0., 0., 0.]]))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -307,7 +307,7 @@
    "source": [
     "ripropagate.generate(etime=12.5,evel=1,output='./022522_ri_c',file='ri_base_noninit.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
     "                     shell='run_base_nal.sh',ver='c',nodes=2)\n",
-    "ripropagate.comp_ascii(depth=600,output='./022522_ri_c')"
+    "ripropagate.comp_ascii(depth=600,output='./022522_ri_c',non_initial=True)"
    ]
   }
  ],
