Updated lab notebook

--- a/ri_lab_notebook_February2022.ipynb
+++ b/ri_lab_notebook_February2022.ipynb
@@ -309,6 +309,29 @@
     "                     shell='run_base_nal.sh',ver='c',nodes=2)\n",
     "ripropagate.comp_ascii(depth=600,output='./022522_ri_c',non_initial=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45f78105",
+   "metadata": {},
+   "source": [
+    "## 2/28/2022 ##\n",
+    "* Both a and b rifted successfully. Inverting now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2eea8f3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ripropagate.generate(etime=32.5,evel=-1,output='./022822_ri_a',file='ri_base.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
+    "                     shell='run_base_nal.sh',ver='a',nodes=3)\n",
+    "\n",
+    "ripropagate.generate(etime=32.5,evel=-1,output='./022822_ri_b',file='ri_base_highpart.prm',soft=0.375,depth=600,p1=400,p2=200,\n",
+    "                     shell='run_base_nal.sh',ver='b',nodes=3)"
+   ]
   }
  ],
  "metadata": {
